deploy/infrarouter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrarouter
  namespace: infrarouter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: infrarouter
  template:
    metadata:
      labels:
        app: infrarouter
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: infrarouter
          image: xavor/infrarouter-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: infrarouter-data
